--- a/index.html
+++ b/index.html
@@ -123,16 +123,20 @@
     <section class="cta">
         <div class="container">
             <div class="cta-card">
-                <h2>Vamos Colaborar?</h2>
+                <h2>Contatos</h2>
                 <p>Explore meu GitHub para ver todos os projetos, contribuições e muito mais. Sempre aberto para novas oportunidades e colaborações!</p>
                 <div class="cta-buttons">
-                    <a href="https://github.com/GabrielGobetti" class="btn primary-btn">
+                      <a href="https://github.com/GabrielGobetti" class="btn primary-btn">
                         <i class="fab fa-github"></i>
                         Acessar GitHub
                     </a>
-                    <a href="https://www.linkedin.com/in/gabrielgobetti/" class="btn outline-btn">
+                    <a href="https://www.linkedin.com/in/gabrielgobetti/" class="btn primary-btn">
                         <i class="fab fa-linkedin"></i>
                         Linkedin
+                    </a>
+                    <a href="http://wa.me/5547991952067" class="btn primary-btn">
+                        <i class="fab fa-linkedin"></i>
+                        WhatsApp
                     </a>
                 </div>
             </div>
