--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         Linkedin
                     </a>
                     <a href="http://wa.me/5547991952067" class="btn primary-btn">
-                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-whatsapp"></i>
                         WhatsApp
                     </a>
                 </div>
