--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                             
                         </div>
                     </div>
-                    <p>Este repositório contém o projeto de sustentabilidade desenvolvido para a escola.</p>
+                    <p>Este repositório contém o meu o primeiro projeto usando SpringBoot.</p>
                     <div class="project-tech">
                         <span class="tech-badge">Html</span>
                         <span class="tech-badge">Css</span>
                         
                     </div>
-                    <a href="https://github.com/GabrielGobetti/site-projeto-sustentabilidade-escolar" class="project-link">Ver projeto <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://github.com/GabrielGobetti/primeiro-projeto-springboot"></i></a>
                 </div>
             </div>
         </div>
@@ -153,3 +153,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
