--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>Projeto De Sustentabilidade</h3>
+                        <h3>Primeiro projeto SpringBoot</h3>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             
@@ -111,6 +111,10 @@
                     <div class="project-tech">
                         <span class="tech-badge">Html</span>
                         <span class="tech-badge">Css</span>
+                        <span class="tech-badge">Java</span>
+                        <span class="tech-badge">JavaScript</span>
+                        <span class="tech-badge">Banco de Dados MySql</span>
+                        <span class="tech-badge">SpringBoot</span>
                         
                     </div>
                     <a href="https://github.com/GabrielGobetti/primeiro-projeto-springboot"></i></a>
@@ -153,4 +157,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
