--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <span class="tech-badge">SpringBoot</span>
                         
                     </div>
-                    <a href="https://github.com/GabrielGobetti/primeiro-projeto-springboot"></i></a>
+                    <a href="https://github.com/GabrielGobetti/primeiro-projeto-springboot" class="project-link">Ver projeto <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
@@ -157,5 +157,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
